[package]
name = "svg2png"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
resvg = "0.45.0"
tokio = { version = "1.44.2", features = ["full"] }
form_urlencoded = "1.2.1" # For manual query string parsing
png = "0.17" # For manual PNG encoding with DPI metadata
anyhow = "1.0.97"
