[package]
name = "svg2png"
version = "0.1.5"
edition = "2021" # Corrected edition to 2021 for stability
authors = ["roland@govcraft.ai"]
description = "A performant Rust microservice using Axum and resvg to easily convert SVG images to PNG format with adjustable DPI."
repository = "https://github.com/Govcraft/svg2png"
license = "MIT"
keywords = ["svg", "png", "conversion", "web", "axum", "resvg", "image"]
categories = ["web-programming::http-server", "multimedia::images"]

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
resvg = "0.45.0"
tokio = { version = "1.44.2", features = ["full"] }
form_urlencoded = "1.2.1" # For manual query string parsing
png = "0.17" # For manual PNG encoding with DPI metadata
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] } # Add env-filter feature
